# gaussian_process

./: CMakeLists.txt  README.md  build.sh  clean.sh
include/: alglib  eigen  gaussian_process.h  gaussian_process_dlib.h
src/: gaussian_process.cpp  gaussian_process_dlib.cpp  testGaussianProcess.cpp
